--- a/styles-espresso-cafe/login.css
+++ b/styles-espresso-cafe/login.css
@@ -76,7 +76,7 @@ body {
   border-radius: 3rem;
   background-color: #d9d9d9e3;
   margin-top: 1rem;
-  box-shadow: 0px 2px 2px 1px #0000006e;
+  box-shadow: 0px 2px 2px 1px #0000003c;
   padding: 1rem 2rem;
   font-size: 15px;
   color: #313131;
@@ -121,7 +121,6 @@ body {
 
   
 }
-
 .text-end {
   font-size: 1.5rem;
   color: #133936;
@@ -132,8 +131,595 @@ body {
   margin-top: 1rem;
 }
 
+#loginError{
+font-size: 1.5rem;
+}
 
 
 
 
+@media screen and (width <= 627px){
+.form-control {
+  width: 100%;
+  max-width: 350px;
+  height: 4rem;
+  border-radius: 3rem;
+  background-color: #d9d9d9e3;
+  margin-top: 1rem;
+  margin-bottom:1rem;
+  box-shadow: 0px 2px 2px 1px #0000003c;
+  padding: 1rem 2rem;
+  font-size: 1.5rem;
+  color: #313131;
+  align-items: center;
+  justify-content: center;
+}
 
+#login-items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  background-color: #ffffff;
+  border-radius: 3rem;
+  padding: 4rem;
+  width: 100%;
+  height:100%;
+  max-width: 550px;
+  box-shadow: 0 4px 6px 3px rgba(0, 0, 0, 0.217);
+  margin-top: 10rem;
+}
+.login-button {
+  background-color: #133936;
+  color: aliceblue;
+  width: 100%;
+  max-width: 300px;
+  height: 4rem;
+  border-radius: 3rem;
+  font-size: 1.5rem;
+  margin-top: 1rem;
+  font-weight: bold;
+  box-shadow: 0px 2px 2px 1px #00000041;
+  border: none;
+  transition: all 0.3s ease;
+  align-content: center;
+
+}
+.text-end {
+  font-size: 1.2rem;
+  color: #133936;
+  font-weight: bold;
+  margin-left: auto;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
+.form-check-label {
+  font-size: 1.2rem;
+  color: #133936;
+  font-weight: bold;
+  margin-right: 2rem;
+}
+.form-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.a-login {
+  color: #998f76;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+.p-login {
+  font-size: 1.2rem;
+  text-align: center;
+}
+.main-title {
+  font-family: "avigea", sans-serif;
+  font-weight: 500;
+  font-size: 4rem;
+  margin-bottom: 1rem; 
+  color: #133936;
+}
+.form-label {
+  font-size: 1.2rem;
+  color: #133936;
+  font-weight: bold;
+  margin-top: 1rem;
+  margin-bottom: -1px;
+
+}
+#login-container {
+  margin-top: 50%;
+  margin-bottom: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height:100%;
+  min-width:100%;
+}
+body{
+align-items: center;
+align-content: center;
+}
+ #email{
+ width: 100%;
+ font-size:1.2rem
+ }
+#password{
+  width: 100%;
+  font-size: 1.2rem
+}
+#loginError{
+font-size: 1.2rem;
+}
+}
+@media screen and (width <= 586px){
+.form-control {
+  width: 100%;
+  max-width: 350px;
+  height: 4rem;
+  border-radius: 3rem;
+  background-color: #d9d9d9e3;
+  margin-top: 1rem;
+  margin-bottom:1rem;
+  box-shadow: 0px 2px 2px 1px #0000003c;
+  padding: 1rem 2rem;
+  font-size: 1.5rem;
+  color: #313131;
+  align-items: center;
+  justify-content: center;
+}
+
+#login-items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  background-color: #ffffff;
+  border-radius: 3rem;
+  padding: 4rem;
+  width: 100%;
+  height:100%;
+  max-width: 450px;
+  box-shadow: 0 4px 6px 3px rgba(0, 0, 0, 0.217);
+  margin-top: 10rem;
+}
+.login-button {
+  background-color: #133936;
+  color: aliceblue;
+  width: 100%;
+  max-width: 300px;
+  height: 4rem;
+  border-radius: 3rem;
+  font-size: 1.5rem;
+  margin-top: 1rem;
+  font-weight: bold;
+  box-shadow: 0px 2px 2px 1px #00000041;
+  border: none;
+  transition: all 0.3s ease;
+  align-content: center;
+
+}
+.text-end {
+  font-size: 1.2rem;
+  color: #133936;
+  font-weight: bold;
+  margin-left: auto;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
+.form-check-label {
+  font-size: 1.2rem;
+  color: #133936;
+  font-weight: bold;
+  margin-right: 2rem;
+}
+.form-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.a-login {
+  color: #998f76;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+.p-login {
+  font-size: 1.2rem;
+  text-align: center;
+}
+.main-title {
+  font-family: "avigea", sans-serif;
+  font-weight: 500;
+  font-size: 4rem;
+  margin-bottom: 1rem; 
+  color: #133936;
+}
+.form-label {
+  font-size: 1.2rem;
+  color: #133936;
+  font-weight: bold;
+  margin-top: 1rem;
+  margin-bottom: -1px;
+
+}
+#login-container {
+  margin-top: 50%;
+  margin-bottom: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height:100%;
+  min-width:100%;
+}
+body{
+align-items: center;
+align-content: center;
+}
+ #email{
+ width: 100%;
+ font-size:1.2rem
+ }
+#password{
+  width: 100%;
+  font-size: 1.2rem
+}
+#loginError{
+font-size: 1.2rem;
+}
+}
+@media screen and (width <= 476px){
+.form-control {
+  width: 100%;
+  max-width: 350px;
+  height: 4rem;
+  border-radius: 3rem;
+  background-color: #d9d9d9e3;
+  margin-top: 1rem;
+  margin-bottom:1rem;
+  box-shadow: 0px 2px 2px 1px #0000003c;
+  padding: 1rem 2rem;
+  font-size: 1.5rem;
+  color: #313131;
+  align-items: center;
+  justify-content: center;
+}
+
+#login-items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  background-color: #ffffff;
+  border-radius: 3rem;
+  padding: 4rem;
+  width: 100%;
+  height:100%;
+  max-width: 350px;
+  box-shadow: 0 4px 6px 3px rgba(0, 0, 0, 0.217);
+  margin-top: 10rem;
+}
+.login-button {
+  background-color: #133936;
+  color: aliceblue;
+  width: 100%;
+  max-width: 300px;
+  height: 4rem;
+  border-radius: 3rem;
+  font-size: 1.5rem;
+  margin-top: 1rem;
+  font-weight: bold;
+  box-shadow: 0px 2px 2px 1px #00000041;
+  border: none;
+  transition: all 0.3s ease;
+  align-content: center;
+
+}
+.text-end {
+  font-size: 1.2rem;
+  color: #133936;
+  font-weight: bold;
+  margin-left: auto;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
+.form-check-label {
+  font-size: 1.2rem;
+  color: #133936;
+  font-weight: bold;
+  margin-right: 2rem;
+}
+.form-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.a-login {
+  color: #998f76;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+.p-login {
+  font-size: 1.2rem;
+  text-align: center;
+}
+.main-title {
+  font-family: "avigea", sans-serif;
+  font-weight: 500;
+  font-size: 4rem;
+  margin-bottom: 1rem; 
+  color: #133936;
+}
+.form-label {
+  font-size: 1.2rem;
+  color: #133936;
+  font-weight: bold;
+  margin-top: 1rem;
+  margin-bottom: -1px;
+
+}
+#login-container {
+  margin-top: 50%;
+  margin-bottom: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height:100%;
+  min-width:100%;
+}
+body{
+align-items: center;
+align-content: center;
+}
+ #email{
+ width: 100%;
+ font-size:1.2rem
+ }
+#password{
+  width: 100%;
+  font-size: 1.2rem
+}
+#loginError{
+font-size: 1.2rem;
+}
+}
+@media screen and (width <= 380px){
+.form-control {
+  width: 100%;
+  max-width: 350px;
+  height: 4rem;
+  border-radius: 3rem;
+  background-color: #d9d9d9e3;
+  margin-top: 1rem;
+  margin-bottom:1rem;
+  box-shadow: 0px 2px 2px 1px #0000003c;
+  padding: 1rem 2rem;
+  font-size: 1.5rem;
+  color: #313131;
+  align-items: center;
+  justify-content: center;
+}
+
+#login-items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  background-color: #ffffff;
+  border-radius: 3rem;
+  padding: 4rem;
+  width: 100%;
+  height:100%;
+  max-width: 280px;
+  box-shadow: 0 4px 6px 3px rgba(0, 0, 0, 0.217);
+  margin-top: 10rem;
+}
+.login-button {
+  background-color: #133936;
+  color: aliceblue;
+  width: 100%;
+  max-width: 300px;
+  height: 4rem;
+  border-radius: 3rem;
+  font-size: 1.5rem;
+  margin-top: 1rem;
+  font-weight: bold;
+  box-shadow: 0px 2px 2px 1px #00000041;
+  border: none;
+  transition: all 0.3s ease;
+  align-content: center;
+
+}
+.text-end {
+  font-size: 1.2rem;
+  color: #133936;
+  font-weight: bold;
+  margin-left: auto;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
+.form-check-label {
+  font-size: 1.2rem;
+  color: #133936;
+  font-weight: bold;
+  margin-right: 2rem;
+}
+.form-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.a-login {
+  color: #998f76;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+.p-login {
+  font-size: 1.2rem;
+  text-align: center;
+}
+.main-title {
+  font-family: "avigea", sans-serif;
+  font-weight: 500;
+  font-size: 4rem;
+  margin-bottom: 1rem; 
+  color: #133936;
+}
+.form-label {
+  font-size: 1.2rem;
+  color: #133936;
+  font-weight: bold;
+  margin-top: 1rem;
+  margin-bottom: -1px;
+
+}
+#login-container {
+  margin-top: 50%;
+  margin-bottom: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height:100%;
+  min-width:100%;
+}
+body{
+align-items: center;
+align-content: center;
+}
+ #email{
+ width: 100%;
+ font-size:1.2rem
+ }
+#password{
+  width: 100%;
+  font-size: 1.2rem
+}
+#loginError{
+font-size: 1.2rem;
+}
+}
+@media screen and (width <= 297px){
+.form-control {
+  width: 100%;
+  max-width: 350px;
+  height: 4rem;
+  border-radius: 3rem;
+  background-color: #d9d9d9e3;
+  margin-top: 1rem;
+  margin-bottom:1rem;
+  box-shadow: 0px 2px 2px 1px #0000003c;
+  padding: 1rem 2rem;
+  font-size: 1.5rem;
+  color: #313131;
+  align-items: center;
+  justify-content: center;
+}
+
+#login-items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  background-color: #ffffff;
+  border-radius: 3rem;
+  padding: 4rem;
+  width: 100%;
+  height:100%;
+  max-width: 230px;
+  box-shadow: 0 4px 6px 3px rgba(0, 0, 0, 0.217);
+  margin-top: 10rem;
+}
+.login-button {
+  background-color: #133936;
+  color: aliceblue;
+  width: 100%;
+  max-width: 300px;
+  height: 4rem;
+  border-radius: 3rem;
+  font-size: 1.5rem;
+  margin-top: 1rem;
+  font-weight: bold;
+  box-shadow: 0px 2px 2px 1px #00000041;
+  border: none;
+  transition: all 0.3s ease;
+  align-content: center;
+
+}
+.text-end {
+  font-size: 1.2rem;
+  color: #133936;
+  font-weight: bold;
+  margin-left: auto;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
+.form-check-label {
+  font-size: 1.2rem;
+  color: #133936;
+  font-weight: bold;
+  margin-right: 2rem;
+}
+.form-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.a-login {
+  color: #998f76;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+.p-login {
+  font-size: 1.2rem;
+  text-align: center;
+}
+.main-title {
+  font-family: "avigea", sans-serif;
+  font-weight: 500;
+  font-size: 4rem;
+  margin-bottom: 1rem; 
+  color: #133936;
+}
+.form-label {
+  font-size: 1.2rem;
+  color: #133936;
+  font-weight: bold;
+  margin-top: 1rem;
+  margin-bottom: -1px;
+
+}
+#login-container {
+  margin-top: 50%;
+  margin-bottom: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height:100%;
+  min-width:100%;
+}
+body{
+align-items: center;
+align-content: center;
+}
+ #email{
+ width: 100%;
+ font-size:1.2rem
+ }
+#password{
+  width: 100%;
+  font-size: 1.2rem
+}
+#loginError{
+font-size: 1.2rem;
+}
+}
